@@ -65,6 +65,9 @@ Improvements
   BulkAdder#add(IntsRef) method. They should provide better performance due to less virtual method calls and
   more efficient bulk processing. (Ignacio Vera)
 
+* GITHUB#14154: Add UnwrappingReuseStrategy for AnalyzerWrapper that consults the wrapped analyzer's strategy
+ to decide if components can be reused or need to be updated. (Mayya Sharipova)
+
 Optimizations
 ---------------------
 
